fix: 프론트 컨텐츠 api 로직 수정