@@ -1,17 +1,16 @@
 package com.devlog.api.service.content;
 
-import com.devlog.api.service.content.dto.ContentInfoResDto;
+import com.devlog.api.service.content.dto.ContentResDto;
 import com.devlog.api.service.content.dto.ContentListResDto;
+import com.devlog.api.service.tag.dto.TagInfoResDto;
 import com.devlog.core.common.constants.CommonConstants;
 import com.devlog.core.common.enumulation.ResponseCode;
+import com.devlog.core.common.util.PageUtils;
 import com.devlog.core.config.exception.DataNotFoundException;
-import com.devlog.core.domain.entity.content.ContentDtlEntity;
 import com.devlog.core.domain.entity.content.ContentEntity;
-import com.devlog.core.domain.repository.content.ContentDtlRepository;
 import com.devlog.core.domain.repository.content.ContentRepository;
-import com.devlog.core.domain.repository.content.ContentTagRepository;
 import lombok.RequiredArgsConstructor;
-import org.jetbrains.annotations.NotNull;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.BeanUtils;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -21,17 +20,15 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @Transactional
 @RequiredArgsConstructor
 public class ContentService {
 
     private final ContentRepository contentRepository;
-
-    private final ContentDtlRepository contentDtlRepository;
-
-    private final ContentTagRepository contentTagRepository;
 
     /**
      * 컨텐츠 목록 조회하기
@@ -40,21 +37,25 @@ public class ContentService {
      * @return 컨텐츠 리스트 반환
      */
     public ContentListResDto getContentsList(int page) {
-        Pageable pageable = PageRequest.of(page, CommonConstants.PAGE_SIZE);
         List<ContentListResDto.ContentMainDto> list = new ArrayList<>();
 
-        //
-        Page<ContentEntity> contentEntityPage = this.contentRepository.findAll(pageable);
+        // select content list
+        Page<ContentEntity> contentEntities = contentRepository.findAll(PageUtils.getPageable(page));
 
-        for (ContentEntity entity : contentEntityPage.stream().toList()) {
+        // setting content entity -> dto list
+        contentEntities.getContent().forEach(content -> {
             final var dto = ContentListResDto.ContentMainDto.builder().build();
-            BeanUtils.copyProperties(entity, dto);
-            dto.setTags(this.contentTagRepository.findTagNameListByCtntNo(entity.getCtntNo()));
+            BeanUtils.copyProperties(content, dto);
 
+            List<TagInfoResDto> tags = content.getContentTags().stream().map(contentTags -> TagInfoResDto.builder()
+                    .tagNo(contentTags.getTags().getTagNo())
+                    .tagName(contentTags.getTags().getTagName())
+                    .build()).collect(Collectors.toList());
+            dto.setTags(tags);
             list.add(dto);
-        }
+        });
 
-        return new ContentListResDto(list, contentEntityPage.getTotalElements());
+        return new ContentListResDto(list, Long.valueOf(contentEntities.getTotalElements()).intValue());
     }
 
     /**
@@ -63,13 +64,19 @@ public class ContentService {
      * @param ctntNo 컨텐츠 번호
      * @return 컨텐츠 반환
      */
-    public ContentInfoResDto getContentInfo(Integer ctntNo) {
-        ContentDtlEntity entity = this.contentDtlRepository.findById(Long.valueOf(ctntNo))
+    public ContentResDto getContentInfo(Integer ctntNo) {
+        ContentEntity content = contentRepository.findById(Long.valueOf(ctntNo))
                 .orElseThrow(() -> new DataNotFoundException(ResponseCode.NOT_FOUND_DATA.getMessage()));
 
-        final var dto = ContentInfoResDto.builder().build();
-        BeanUtils.copyProperties(entity, dto);
-        dto.setTags(this.contentTagRepository.findTagNameListByCtntNo(entity.getCtntNo()));
+        final var dto = ContentResDto.builder().build();
+        BeanUtils.copyProperties(content, dto);
+
+        // setting content tags
+        List<TagInfoResDto> tags = content.getContentTags().stream().map(contentTags -> TagInfoResDto.builder()
+                .tagNo(contentTags.getTags().getTagNo())
+                .tagName(contentTags.getTags().getTagName())
+                .build()).collect(Collectors.toList());
+        dto.setTags(tags);
 
         return dto;
     }
@@ -78,43 +85,29 @@ public class ContentService {
      * 컨텐츠 검색하기
      *
      * @param param 검색 키워드
-     * @param page 페이지 번호 (기본값 = 1)
+     * @param page  페이지 번호 (기본값 = 1)
      * @return 검색한 키워드 관련 리스트 반환
      */
     public ContentListResDto searchContentsInfo(String param, int page) {
-        Pageable pageable = PageRequest.of(page, CommonConstants.PAGE_SIZE);
         List<ContentListResDto.ContentMainDto> list = new ArrayList<>();
 
-        Page<ContentEntity> contentEntityPage = this.contentRepository.findAllByCtntTitleContaining(param, pageable);
+        // select content list
+        Page<ContentEntity> contentEntities = contentRepository.findAllByCtntTitleContaining(param, PageUtils.getPageable(page));
 
-        for (ContentEntity entity : contentEntityPage.stream().toList()) {
+        // setting content entity -> dto list
+        contentEntities.getContent().forEach(content -> {
             final var dto = ContentListResDto.ContentMainDto.builder().build();
-            BeanUtils.copyProperties(entity, dto);
-            dto.setTags(this.contentTagRepository.findTagNameListByCtntNo(entity.getCtntNo()));
+            BeanUtils.copyProperties(content, dto);
 
-            list.add(dto);
-        }
-
-        return new ContentListResDto(list, contentEntityPage.getTotalElements());
-    }
-
-    /**
-     * 컨텐츠 리스트 반환
-     *
-     * @param list DTO 리스트
-     * @param contentEntityPage Page 타입 리스트
-     * @return ContentListResDto 객체 반환
-     */
-    @NotNull
-    private ContentListResDto getContentMainList(List<ContentListResDto.ContentMainDto> list, Page<ContentEntity> contentEntityPage) {
-        contentEntityPage.stream().toList().forEach(entity -> {
-            final var dto = ContentListResDto.ContentMainDto.builder().build();
-            BeanUtils.copyProperties(entity, dto);
-            dto.setTags(this.contentTagRepository.findTagNameListByCtntNo(entity.getCtntNo()));
-
+            List<TagInfoResDto> tags = content.getContentTags().stream().map(contentTags -> TagInfoResDto.builder()
+                    .tagNo(contentTags.getTags().getTagNo())
+                    .tagName(contentTags.getTags().getTagName())
+                    .build()).collect(Collectors.toList());
+            dto.setTags(tags);
             list.add(dto);
         });
 
-        return new ContentListResDto(list, contentEntityPage.getTotalElements());
+        return new ContentListResDto(list, Long.valueOf(contentEntities.getTotalElements()).intValue());
     }
+
 }
